# gst-vimbasrc

./: .gitignore  CMakeLists.txt  Dockerfile  EXAMPLES.md  INSTALLING.md  LICENSE.txt  README.md  build.bat  build.sh
src/: config.h.in  gstvimbasrc.c  gstvimbasrc.h  gstvimbasrc_device.c  gstvimbasrc_device.h  gstvimbasrc_deviceprovider.c  gstvimbasrc_deviceprovider.h  helpers.h  pixelformats.c  pixelformats.h  vimba_helpers.c  vimba_helpers.h
